[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://PlayerSpawn.gd" type="Script" id=2]
[ext_resource path="res://Levels/TileMap/Tilemap.tres" type="TileSet" id=3]
[ext_resource path="res://Animation/Ground_LVL_1/Ground0000.png" type="Texture" id=4]

[node name="Level" type="Navigation2D"]
edge_connection_margin = 32.0
script = ExtResource( 1 )
next_level = "res://Levels/Level14.tscn"

[node name="LevelSwitchTimer" type="Timer" parent="."]
wait_time = 11.0
one_shot = true
autostart = true

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2( 480, 480 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.266667, 0.00392157, 0.00392157, 1 )
position = Vector2( -32, -32 )
scale = Vector2( 2.02772, 2.02772 )
texture = ExtResource( 4 )
centered = false
region_filter_clip = true

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Tilemap" type="TileMap" parent="."]
modulate = Color( 0.584314, 0.121569, 0.121569, 1 )
tile_set = ExtResource( 3 )
collision_layer = 3
collision_mask = 3
bake_navigation = true
format = 1
tile_data = PoolIntArray( -1, 4, 0, -65536, 4, 196609, -65535, 4, 196609, -65534, 4, 196609, -65533, 4, 196609, -65532, 4, 196609, -65531, 4, 196609, -65530, 4, 196609, -65529, 4, 196609, -65528, 4, 196609, -65527, 4, 196609, -65526, 4, 196609, -65525, 4, 196609, -65524, 4, 196609, -65523, 4, 196609, -65522, 4, 196609, -65521, 4, 0, 65535, 4, 65539, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 4, 65539, 131071, 4, 65539, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 4, 65539, 196607, 4, 65539, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 4, 65539, 262143, 4, 65539, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 4, 65539, 327679, 4, 65539, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 4, 65539, 393215, 4, 65539, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 4, 65539, 458751, 4, 65539, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 4, 65539, 524287, 4, 65539, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 4, 65539, 589823, 4, 65539, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 4, 65539, 655359, 4, 65539, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 4, 65539, 720895, 4, 65539, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 4, 65539, 786431, 4, 65539, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 4, 65539, 851967, 4, 65539, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 4, 65539, 917503, 4, 65539, 851968, 3, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 4, 65539, 983039, 4, 65539, 917504, 3, 0, 917505, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 4, 65539, 1048575, 4, 0, 983040, 4, 196609, 983041, 4, 196609, 983042, 4, 196609, 983043, 4, 196609, 983044, 4, 196609, 983045, 4, 196609, 983046, 4, 196609, 983047, 4, 196609, 983048, 4, 196609, 983049, 4, 196609, 983050, 4, 196609, 983051, 4, 196609, 983052, 4, 196609, 983053, 4, 196609, 983054, 4, 196609, 983055, 4, 0 )

[node name="EnemySpawns" type="Node2D" parent="."]

[node name="Spawn" type="Node2D" parent="EnemySpawns"]
position = Vector2( 0, 384 )

[node name="Spawn2" type="Node2D" parent="EnemySpawns"]
position = Vector2( 0, 448 )

[node name="Spawn3" type="Node2D" parent="EnemySpawns"]
position = Vector2( 0, 512 )

[node name="Spawn4" type="Node2D" parent="EnemySpawns"]
position = Vector2( 0, 576 )

[node name="Spawn5" type="Node2D" parent="EnemySpawns"]
position = Vector2( 960, 384 )

[node name="Spawn6" type="Node2D" parent="EnemySpawns"]
position = Vector2( 960, 448 )

[node name="Spawn7" type="Node2D" parent="EnemySpawns"]
position = Vector2( 960, 512 )

[node name="Spawn8" type="Node2D" parent="EnemySpawns"]
position = Vector2( 960, 576 )

[node name="Enemies" type="Node2D" parent="."]

[connection signal="timeout" from="LevelSwitchTimer" to="." method="_on_LevelSwitchTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
